# ARCHI

./: .gitignore  README.md  package-lock.json  package.json
MIS COMANDOS/: GX GitAuto.sh  run-build.sh  run-dev.sh
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/drag-rs/: Cargo.toml
src-tauri/drag-rs/src/: lib.rs
src-tauri/drag-rs/src/platform_impl/: mod.rs
src-tauri/drag-rs/src/platform_impl/macos/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: filesystem.rs  lib.rs  menu.rs  models.rs  paths.rs  setup_directories.rs  thumbnails.rs
src/Context-Menu/: Context-Menu.css  Context-Menu.js
src/Load-Screen/: loader.css  loader.js
src/M-Biblioteca/: M-Biblioteca.css  M-Biblioteca.js
src/M-Contaduria/: M-Contaduria.css  M-Contaduria.js
src/M-Inicio/: M-Inicio.css  M-Inicio.js
src/M-Recursos/: M-Recursos.css  M-Recursos.js
src/M-Settings/: M-Settings.css  M-Settings.js
src/assets/ARCHI.icon/: icon.json
